# weapon-det

./: .gitignore  CMakeLists.txt  Dockerfile  start.sh  vcpkg.json
app/: .clang-format  config.cpp  config.hpp
app/core/inferences/: person.cpp  person.hpp  weapon.cpp  weapon.hpp
app/core/orchestrators/: camera.cpp  msg_gen.cpp  person_detection_main.cpp  weapon.cpp  zmq_io.cpp  zmq_io.hpp
app/core/services/: bbox_utils.cpp  bbox_utils.hpp  weapon_service.cpp  weapon_service.hpp
app/kafka/: kafka_producer.cpp  kafka_producer.hpp  msk_token.cpp  msk_token.hpp
app/mqtt/: rabbitmq.hpp
app/utils/: aws.cpp  aws.hpp  bbox_utils.cpp  bbox_utils.hpp  detection_json.hpp  logger.cpp  logger.hpp  message.hpp  redis_client.hpp  rtsp_camera.cpp  rtsp_camera.hpp
